# aiodeque

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: run.py
src/aiodeque/: __init__.py  _deque.py
tests/: __init__.py  test_async.py  test_sync.py
